--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -74,10 +74,45 @@
         </div>
        </div>
       </div>
-      <center>
-      <video  src="/videos/experienciagin.mp4" width="600px" height="600px" controls></video>
-      </center>
+      <div class="video">
+        <center>
+        <video  src="/videos/experienciagin.mp4" width="600px" height="600px" controls></video>
+        </center>
+      </div>
       <!--FUTURO CARRUSEL----------------------------------->
+      <main class="container">
+        <div id="carousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-controls">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              </div>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="background-image:url('/img/carouseleventos1.jpg')">
+          </div>
+          <div class="carousel-item" style="background-image:url('/img/carouseleventos2.jpg')">
+          </div>
+          <div class="carousel-item" style="background-image:url('/img/carrouseleventos\ 3.webp')">
+          </div>
+          <div class="carousel-item" style="background-image:url('/img/carrouseleventos4.jpg')">
+          </div>
+          <div class="carousel-item" style="background-image:url('/img/carrouseleventos5.jpg')">
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </div>
+      </div>
+      </main>
+
       <footer>
         <div class="container">
           <div class="row">
